Fix comment list alignment

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1059,6 +1059,10 @@ h5 {
   margin-bottom: 30px;
 }
 
+.modal-text {
+  text-align: center;
+}
+
 .modal-body .modal-flavour {
   display: flex;
   margin: 0;
@@ -3192,9 +3196,11 @@ h5 {
 
 .comments-list {
   display: flex;
+  flex-direction: column;
   width: 75%;
   list-style: none;
   padding: 0;
+  margin-bottom: 40px;
 }
 
 .event-comment {
